--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "bootstrap": "ts-node src/bootstrap.ts",
     "mysql": "ts-node src/mysql.ts",
-    "psql": "ts-node src/psql.ts",
-    "benchmark:mysql": "node src/benchmarks/mysql-benchmark.js",
-    "benchmark:postgres": "node src/benchmarks/postgres-benchmark.js"
+    "psql": "ts-node src/psql.ts"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
